# ga-framework

./: .gitignore  Doxyfile  Makefile.am  README  aclocal.m4  config.h.in  configure.ac  ga-2.pbs
m4/: ac_gcov.m4
mk/: gcov-recursive.am
src/: Makefile.am
src/ga/: Makefile.am
src/ga/framework/: .gitignore  Makefile.am  environment.c  ga-debug.c  population.c  utils.c
src/ga/framework/includes/: environment.h  ga-debug.h  ga.h  population.h  utils.h
src/ga/main/: .gitignore  Makefile.am  ga-cl.c  ga-debug.c  main.c
src/ga/main/includes/: ga-cl.h  ga-debug.h
test/: Makefile.am
test/ga/: Makefile.am
test/ga/framework/: .gitignore  Makefile.am  ga_environment_test.c  ga_framework_suite.c  ga_population_test.c  ga_utils_test.c
test/ga/framework/includes/: ga_environment_test.h  ga_population_test.h  ga_utils_test.h  setup.h
